Change html, body and .content height to display correctly on smaller and bigger screens

--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
 /** { border: 1px solid black;}*/
 @import url('https://fonts.googleapis.com/css2?family=Gochi+Hand&display=swap');
 
+html, body {
+    height: 100%;
+}
+
 body {
     background-color: #fef8f5;
     font-family: Arial, Helvetica, sans-serif;
     color: #332d26;
+    margin: 0;
 }
 
 h1 {
@@ -20,6 +25,9 @@ a {
     margin: 2em auto 0.5em;
     text-decoration: none;
     color: #443c33;
+    font-size: 1.1em;
+    margin-top: 1em;
+    margin-bottom: 0.5;
 }
 
 a:hover {
@@ -44,6 +52,7 @@ a:hover {
 .content {
     flex-direction: column;
     align-items: center;
+    min-height: 100%;
 }
 
 .content,
@@ -70,7 +79,7 @@ a:hover {
 
 .selection {
     gap: 15em;
-    margin: 1em auto;
+    margin: 0.3em auto;
 }
 
 .buttons {
